# rejectkit

./: .gitignore  CHANGELOG.md  PUBLISHING.md  README.md  mkdocs.yml  pyproject.toml
docs/: api.md  benchmark.md  diagnostics.md  explainer.md  index.md  methods.md
examples/: quickstart.py  real_data_home_credit.ipynb  walkthrough.ipynb  walkthrough.py
src/rejectkit/: __init__.py  _compat.py  base.py  benchmark.py  datasets.py  diagnostics.py  estimator.py  plotting.py
src/rejectkit/methods/: __init__.py  augmentation.py  extrapolation.py  heckman.py  parcelling.py  reclassification.py  reweighting.py  semi_supervised.py
tests/: test_benchmark.py  test_diagnostics.py  test_estimator.py  test_heckman.py  test_methods.py  test_plotting.py  test_polars.py
