[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rejectkit"
version = "0.3.0"
description = "Reject inference for credit scoring — 8 scikit-learn-compatible methods plus an honest benchmark that tells you whether it actually helps."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Han", email = "kim.hangil.ds@gmail.com" }]
keywords = [
    "credit-scoring",
    "reject-inference",
    "scorecard",
    "risk",
    "sample-selection-bias",
    "machine-learning",
    "scikit-learn",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.4"]
polars = ["polars>=0.20"]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.0"]
dev = [
    "pytest>=7",
    "ruff>=0.1",
    "matplotlib>=3.4",
    "polars>=0.20",
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[project.urls]
Homepage = "https://github.com/HangilKim11/rejectkit"
Repository = "https://github.com/HangilKim11/rejectkit"
Issues = "https://github.com/HangilKim11/rejectkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rejectkit"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # pytest.importorskip() must run before imports
